-Added delete budget and completed projects comments
